src/App.css
.App {
  text-align: center;
  padding: 30px 5%;
  background-image: linear-gradient(to bottom right, #ddebff, #fff,  #cce1ff)
}

.App * {
  box-sizing: border-box;
}

ul {
  padding: 0;
  list-style: none;
}

p {
  margin: 5px 0;
}

.display-none {
  display: none;
}

.showSuggestions {
  display: block;
}

input[type="text"],
input[type="number"] {
  padding: 8px 6px 8px 10px;
  border-radius: 4px;
  outline: none;
  border: 1px solid #457cf2;
  font-size: 14px;
  line-height: 20px;
  align-self: center;
  height: 38px;
  background-color: #ddebff;
}

.city {
  width: 250px;
}

.CitySearch,
.numberOfEvents {
  display: flex;
  flex-direction: column;
  flex-basis: 300px;
  max-width: 300px;
  margin: auto;
  position: relative;
}

.alert-message {
  display: flex;
  justify-content: center;
  align-items: center;
}

.Alert {
  position: fixed;
  top: 0px;
}

.input-message {
  padding: 8px 0;
}

.suggestions {
  width: 250px;
  position: absolute;
  z-index: 2;
  align-self: center;
  margin: 0;
  top: 72px;
  font-size: 14px;
  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
}

.suggestions > li {
  text-align: left;
  padding: 8px 6px 8px 10px;
  background-color: #eee;
  cursor: default;
}

.suggestions > li:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.suggestions > li:hover {
  background-color: #bcdcdb;
}

.event {
  padding: 10px 10px 35px;
  margin-bottom: 10px;
  text-align: left;
  border: 1px solid #457cf2;
  border-radius: 4px;
  position: relative;
}

.show-details,
.hide-details {
  position: absolute;
  right: 5px;
  bottom: 5px;
  padding: 5px 8px;
  border-radius: 4px;
  outline: none;
  border: 1px solid #457cf2;
  background-color: #ddebff;
  cursor: pointer;
}

.show-details:hover,
.hide-details:hover {
  box-shadow: 0 0 6px #4285f4;
}

.name {
  font-size: 18px;
  font-weight: 600;
}

.group-name {
  text-transform: uppercase;
  font-size: 14px;
}

.going,
.visibility {
  font-style: italic;
}

.description {
  overflow-x: hidden;
}

.button-wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  padding: 20px;
  font-family: sans-serif;
}

.data-vis-wrapper {
  display: flex;
  align-items: center;
  flex-direction: column;
}
.data-vis-wrapper .recharts-responsive-container {
  min-width: 100%;
  display: flex;
}
.recharts-surface {
  overflow: visible;
}

.login-button {
  color: #494949;
  text-transform: uppercase;
  text-decoration: none;
  background: #ffffff;
  padding: 20px;
  border: 4px solid #494949;
  display: inline-block;
  transition: all 0.4s ease 0s;
  min-width: 10rem;
  margin: 1rem;
}

.google-btn {
  width: 184px;
  height: 42px;
  margin: 1rem;
  background-color: #ffe7b3;
  border-radius: 4px;
 border: 1px solid #e60000;
}
.google-btn:hover {
  box-shadow: 0 0 6px #cc8800;
  cursor: pointer;
}
.google-btn:active {
  background: #b37700;
}

.google-icon-wrapper {
  position: absolute;
  margin-top: 1px;
  margin-left: 1px;
  width: 40px;
  height: 40px;
  border-radius: 2px;
  background-color: #fff;
}
.google-icon {
  position: absolute;
  margin-top: 11px;
  margin-left: -8px;
  width: 18px;
  height: 18px;
}
.btn-text {
  float: right;
  margin: 11px 11px 0 0;
  color: #fff;
  font-size: 14px;
  letter-spacing: 0.2px;
  font-family: "Roboto";
}

@media only screen and (min-width: 992px) {
  .data-vis-wrapper {
    flex-direction: row;
  }
  .data-vis-wrapper .recharts-responsive-container {
    flex-basis: 50%;
    max-width: 50%;
    min-width: auto;
    margin: 0 auto;
  }
}

.event {
  max-width: 600px;
  margin: 10px auto;
}

@media only screen and (min-width: 992px) {
  .EventsList {
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-content: center;

  }
  .event {
   margin: 10px;
  }
}

